syntax = "proto3";

package kvstore;

option go_package = "github.com/carvalhodanielg/kvstore/pb;pb";


service KvStore {
    rpc Put(PutRequest) returns (PutResponse);
    rpc Get(GetRequest) returns (GetResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
} 

message DeleteRequest {
    string key = 1;
}

message DeleteResponse {
    string key = 1;
}

message PutRequest {
    string key = 1;
    string value = 2;
}

message PutResponse {
    bool success = 1;
}

message GetRequest {
    string key = 1;
}

message GetResponse {
    string key = 1;
    string value = 2;
}